feat: add createUsers
